--- a/resources/variables.less
+++ b/resources/variables.less
@@ -42,41 +42,42 @@
 
 /* == Colors == */
 
+
 /*
  * Syntax highlight colors
  * Based on Material Theme Lighter
  * https://material-theme.site
-*/
-@color-syntax-red: #e53935;
-@color-syntax-orange: #f76d47;
-@color-syntax-yellow: #e2931d;
-@color-syntax-green: #91b859;
-@color-syntax-cyan: #39adb5;
-@color-syntax-blue: #6182b8;
-@color-syntax-paleblue: #8796b0;
-@color-syntax-purple: #9c3eda;
-@color-syntax-brown: #916b53;
-@color-syntax-pink: #ff5370;
-@color-syntax-violet: #945eb8;
-@color-syntax-grey: #90a4ae;
+ */
+@color-syntax-red: oklch(0.396 0.141 25.723);
+@color-syntax-orange: oklch(0.646 0.222 41.116);
+@color-syntax-yellow: oklch(0.769 0.188 70.08);
+@color-syntax-green: oklch(0.532 0.157 131.589);
+@color-syntax-cyan: oklch(0.609 0.126 221.723);
+@color-syntax-blue: oklch(0.3166 0.1496 262.5219);
+@color-syntax-paleblue: oklch(0.685 0.169 237.323);
+@color-syntax-purple: oklch(0.381 0.176 304.987);
+@color-syntax-brown: oklch(0.268 0.007 34.298);
+@color-syntax-pink: oklch(0.712 0.194 13.428);
+@color-syntax-violet: oklch(0.5495 0.1615 297.66);
+@color-syntax-grey: oklch(0.442 0.017 285.786);
 
 /*
  * Syntax highlight colors
- * Based on Material Theme Palenight
+ * Based on Material Theme OneDark
  * https://material-theme.site
-*/
-@color-syntax-red-dark: #f07178;
-@color-syntax-orange-dark: #f78c6c;
-@color-syntax-yellow-dark: #ffcb6b;
-@color-syntax-green-dark: #c3e88d;
-@color-syntax-cyan-dark: #89ddff;
-@color-syntax-blue-dark: #82aaff;
-@color-syntax-paleblue-dark: #b2ccd6;
-@color-syntax-purple-dark: #c792ea;
-@color-syntax-brown-dark: #916b53;
-@color-syntax-pink-dark: #ff9cac;
-@color-syntax-violet-dark: #bb80b3;
-@color-syntax-grey-dark: #676E95;
+ */
+@color-syntax-red-dark: oklch( 0.6709 0.1448 17 );
+@color-syntax-orange-dark: oklch( 0.8053 0.1563 63.82 );
+@color-syntax-yellow-dark: oklch( 0.8249 0.097 82.26 );
+@color-syntax-green-dark: oklch(0.7682 0.1099 133.07);
+@color-syntax-cyan-dark: oklch( 0.7231 0.0916 206.31 );
+@color-syntax-blue-dark: oklch(0.7282 0.122 246);
+@color-syntax-paleblue-dark: oklch(0.7282 0.122 246);
+@color-syntax-purple-dark: oklch( 0.6936 0.1635 318.21 );
+@color-syntax-brown-dark: @color-syntax-pink-dark;
+@color-syntax-pink-dark: oklch(0.71 0.17 12);
+@color-syntax-violet-dark: oklch( 0.6936 0.1635 318.21 );
+@color-syntax-grey-dark: oklch( 0.6214 0.0296 262.28 );
 
 /* == Box model properties == */
 /* `--*size` variables are used for `*width` & `*height` properties. */
